--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ crash.*.log
 
 # Ignore transient lock info files created by terraform apply
 *.terraform.tfstate.lock.info
-*.terraform.lock*
+
+*terraform.lock*
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
