--- a/add-repo.yaml
+++ b/add-repo.yaml
@@ -1,10 +1,33 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: kcdsf-cluster-deploy
+  name: gcp-cluster-gitrepo
   namespace: kcm-system 
+  labels:
+    k0rdent.mirantis.com/managed: "true"
 spec:
   interval: 1m
   url: https://github.com/vtrenton/kcdsf-cluster-deploy
   ref:
     branch: master
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: gcp-cluster-deploy
+  namespace: kcm-system
+  labels:
+    k0rdent.mirantis.com/managed: "true"
+spec:
+  interval: 5m
+  targetNamespace: kcm-system
+  install:
+    createNamespace: true
+  chart:
+    spec:
+      chart: ./chart
+      sourceRef:
+        kind: GitRepository
+        name: gcp-cluster-gitrepo
+        namespace: kcm-system
+      interval: 1m
