created script to pull kubeconfig for downstream cluster
Signed-off-by: Trenton VanderWert <trenton.vanderwert@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# vim swap files
 *.swp
+
+#google cloud artifacts
 key.json
+
+# kubeconfig for downstream cluster
+downstream-kc.yaml
 # Local .terraform directories
 *.terraform/
 
