--- a/add-repo.yaml
+++ b/add-repo.yaml
@@ -25,9 +25,26 @@ spec:
     createNamespace: true
   chart:
     spec:
-      chart: ./chart
+      chart: chart
       sourceRef:
         kind: GitRepository
         name: gcp-cluster-gitrepo
         namespace: kcm-system
       interval: 1m
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmChart
+metadata:
+  labels:
+    k0rdent.mirantis.com/managed: "true"
+  name: kcm-system-gcp-cluster-deploy
+  namespace: kcm-system
+spec:
+  chart: chart
+  interval: 1m0s
+  reconcileStrategy: ChartVersion
+  sourceRef:
+    kind: GitRepository
+    name: gcp-cluster-gitrepo
+  version: '*'
+
