renamed and moved around files
Signed-off-by: Trenton VanderWert <trenton.vanderwert@gmail.com>

--- a/01_add-repo.yaml
+++ b/01_add-repo.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: gcp-cluster-gitrepo
+  name: clusterdeployment-gitrepo
   namespace: kcm-system 
   labels:
     k0rdent.mirantis.com/managed: "true"
@@ -14,7 +14,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: gcp-cluster-deploy
+  name: cluster-deploy
   namespace: kcm-system
   labels:
     k0rdent.mirantis.com/managed: "true"
@@ -28,7 +28,7 @@ spec:
       chart: chart
       sourceRef:
         kind: GitRepository
-        name: gcp-cluster-gitrepo
+        name: clusterdeployment-gitrepo
         namespace: kcm-system
       interval: 1m
 ---
@@ -37,7 +37,7 @@ kind: HelmChart
 metadata:
   labels:
     k0rdent.mirantis.com/managed: "true"
-  name: kcm-system-gcp-cluster-deploy
+  name: kcm-system-cluster-deploy
   namespace: kcm-system
 spec:
   chart: chart
@@ -45,6 +45,6 @@ spec:
   reconcileStrategy: ChartVersion
   sourceRef:
     kind: GitRepository
-    name: gcp-cluster-gitrepo
+    name: clusterdeployment-gitrepo
   version: '*'
 
